@@ -37,6 +37,19 @@
 		</pluginManagement>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.0.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+					<encoding>utf-8</encoding>
+					<!--Begin Name:wuqiwei Date:2013-12-21 AddReason:mvn compile 会使用该路径下的所有类和依赖的jar包编译源文件 -->
+					<compilerArgument>-Djava.ext.dirs=libs</compilerArgument>
+					<!--End Name:wuqiwei Date:2013-12-21 AddReason:mvn compile 会使用该路径下的所有类和依赖的jar包编译源文件 -->
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
 				<artifactId>android-maven-plugin</artifactId>
 				<configuration>
